styles/form.css
body {
	font-family: Roboto, Arial, sans-serif;
	margin: 1rem;
}

h1 {
	font-size: 1.75rem;
	color: navy;
	border-bottom: none;
    text-align: left;
}

hr {
	margin-bottom: 40px;
}

label {
	display: block;
	font-weight: 700;
}

input[type=text], input[type=range], input[type=radio] {
	margin: 0rem;
	padding: 0.5em;
}

#alpha:focus, #fruit:focus {
	background-color: #eee;
}

#alpha:valid, #fruit:valid {
	background-color: #bed;
}
#alpha:invalid, #alpha:invalid {
	background-color: #fff0f3;
	border: 1px solid red;
}
#alpha:invalid::before {
	content: "❌";
}

#r {
	width: 180px;
	margin-bottom: 0;
}

#rangevalue {
	font-size: 2rem;
	color: navy;
}

#rangevalues {
	display: flex;
	margin: 0 0 0 25px;
	width: 200px;
}

#rangevalues option {
	flex: 1 1 auto;
}

#validate {
	visibility: none;
	margin: 10px;
	padding: 0.5rem;
	color: red;
}

#password:invalid {
	background-color: #fff0f3;
	animation: shaketext 500ms;
}

#emailvalidate {
	visibility: none;
	margin: 10px;
	padding: 0.5rem;
	color: red;
}

#email:invalid {
	background-color: #fff0f3;
	animation: shaketext 500ms;
}
/*----------- MAIN --------------*/
form fieldset {
    margin: 2rem 0;
    border: 1px solid #445ba9;
    border-radius: 10px;
    padding: .5rem 2%;
    }
form legend {
    color: #445ba9;
    margin: 0 1rem;
    padding: 0 .5rem;
}
form label.top, form div {
    display: block;
    padding-top: 1rem;
    color: #9c2c13;
    font-size: .8rem;
}
form label.top input, form label.top select {
    display: block;
    font-size: 1rem;
    border: solid 1px #999;
    border-radius: 4px;
    padding: .75rem;
    color: #555;
    width: 100%;
    max-width: 20rem;
    background-color: rgba(0, 0, 0, .1);
}
form label.sbs {
    display: block;
    padding: .75rem 0;
    color: #555;
} 
form input.submitBtn {
    border: none;
    background-color: #9c2c13;
    color: white;
    border-radius: 1rem;
    padding: .75rem 1.5em;
    margin: 0 0 2rem 2%;
    width: 96%;
    max-width: 20rem;
}
form label.top input:required {
    border-left: red solid 6px;
}
form label.top input:required:valid {
    border-left: green solid 6px;
}

